--- a/sass-css/_General-Style.scss
+++ b/sass-css/_General-Style.scss
@@ -41,7 +41,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    padding: 1rem 10%;
+    padding: 0 10%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -300,7 +300,7 @@ body {
     .about-content {
       max-width: 100%;
       max-height: 100%;
-      margin-top: 4rem;
+      margin-top: 1rem;
       padding-bottom: 4rem;
 
       #carouselExample {
@@ -464,7 +464,7 @@ body {
           }
 
           img {
-            width: 14rem;
+            width: 13rem;
           }
         }
 
@@ -489,13 +489,12 @@ body {
         flex-wrap: wrap;
 
         .owl-carousel-2 {
-          
           display: flex;
           height: 25rem;
 
-          .item{
-display: flex;
-justify-content: center;
+          .item {
+            display: flex;
+            justify-content: center;
           }
 
           #HTML {
@@ -677,7 +676,7 @@ justify-content: center;
     background: linear-gradient(to top, $bg-secundary, $bg-primary);
     padding: 0 10%;
     padding-top: 13rem;
-    padding-bottom: 10rem;
+    padding-bottom: 5rem;
 
     #MY {
       text-align: center;
@@ -691,13 +690,19 @@ justify-content: center;
     }
 
     .projects-container {
-      margin-top: 4rem;
+      margin-top: 2.5rem;
+      justify-content: center;
       display: flex;
       flex-wrap: wrap;
 
       .owl-carousel-1 {
         display: flex;
-        justify-content: center;
+        flex-wrap: wrap;
+
+        .item {
+          display: flex;
+          justify-content: center;
+        }
 
         .card {
           margin: 2rem;
@@ -710,9 +715,9 @@ justify-content: center;
           width: 100%;
           height: 40rem;
           max-width: 50ch;
-          transition: all 0.3s ease-in-out;
           border-radius: 1rem;
           overflow: hidden;
+          transition: all 0.3s ease-in-out;
 
           .card-container {
             border-radius: 1rem;
@@ -724,7 +729,7 @@ justify-content: center;
               rgba(0, 0, 0, 0.4)
             );
 
-            transform: translateY(82%);
+            transform: translateY(84%);
             transition: transform 0.5s ease-in-out;
             height: 100%;
 
@@ -796,40 +801,45 @@ justify-content: center;
                 }
               }
 
-              a {
-                position: relative;
-                display: inline-flex;
+              #Enlaces {
+                display: flex;
                 flex-wrap: wrap;
-                margin: 0 0.8rem;
-                margin-top: 2rem;
-                text-decoration: none;
                 justify-content: center;
-                align-items: center;
-                width: 40px;
-                height: 40px;
-                background: transparent;
-                border: solid 0.2rem $main-color;
-                border-radius: 50%;
-                transition: 0.5s;
-                transition: box-shadow 0.3s ease;
-                opacity: 0;
-                transition: opacity 1s ease-in-out;
-                transition-delay: 1s;
 
-                i {
-                  font-size: 2.5rem;
-                }
+                a {
+                  position: relative;
+                  display: inline-flex;
+                  flex-wrap: wrap;
+                  margin: 0 0.8rem;
+                  margin-top: 2rem;
+                  text-decoration: none;
+                  justify-content: center;
+                  align-items: center;
+                  width: 40px;
+                  height: 40px;
+                  background: transparent;
+                  border: solid 0.2rem $main-color;
+                  border-radius: 50%;
+                  transition: 0.5s;
+                  transition: box-shadow 0.3s ease;
+                  opacity: 0;
+                  transition: opacity 1s ease-in-out;
+                  transition-delay: 1s;
 
-                &:hover {
-                  box-shadow: 0 0 1rem 0.5rem $main-color;
-                  color: $text-color;
+                  i {
+                    font-size: 2.5rem;
+                  }
+
+                  &:hover {
+                    box-shadow: 0 0 1rem 0.5rem $main-color;
+                    color: $text-color;
+                  }
                 }
               }
             }
           }
 
-          &:hover,
-          :focus-within {
+          &:hover {
             box-shadow: 0 0 1rem 0.5rem $main-color;
             transform: scale(1.05);
             cursor: pointer;
@@ -853,14 +863,155 @@ justify-content: center;
                   opacity: 1;
                 }
 
-                a {
-                  opacity: 1;
+                #Enlaces {
+                  a {
+                    opacity: 1;
+                  }
                 }
               }
             }
           }
         }
       }
+
+      .viewm {
+        display: flex;
+        flex-wrap: wrap;
+
+        #viewmp {
+          a {
+            border: solid 0.2rem $main-color;
+            position: relative;
+            display: inline-flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            width: 25rem;
+            height: 100%;
+            border-radius: 1rem;
+            font-size: 2rem;
+            font-weight: 700;
+            letter-spacing: 0.1rem;
+            transition: 0.3s;
+            transition: box-shadow 0.3s ease;
+            color: $main-color;
+            text-decoration: none;
+
+            &:hover {
+              box-shadow: 0 0 3rem $main-color;
+              color: $text-color;
+              background: linear-gradient(to bottom, $main-color, #009cd9);
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .Contact {
+    min-height: auto;
+    position: relative;
+    background: linear-gradient(to bottom, $bg-secundary, $bg-primary);
+    padding: 0 10%;
+    padding-top: 10rem;
+    padding-bottom: 7rem;
+
+    #contact {
+      text-align: center;
+      font-family: "Kenia", sans-serif;
+      font-size: 5rem;
+
+      span {
+        font-family: "Kenia", sans-serif;
+        color: $main-color;
+      }
+    }
+
+    form {
+      max-width: 70rem;
+      margin: 1rem auto;
+      text-align: center;
+
+      .input-box {
+        position: relative;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+
+        .input-field {
+          position: relative;
+          width: 49%;
+          margin: 0.8rem 0;
+
+          input {
+            width: 100%;
+            height: 100%;
+            padding: 1.5rem;
+            font-size: 1.6rem;
+            color: $text-color;
+            background: transparent;
+            border-radius: 0.6rem;
+            border: solid $main-color 2px;
+
+            &::placeholder {
+              color: $text-color;
+            }
+          }
+        }
+      }
+
+      .textarea-field {
+        position: relative;
+        margin: 0.8rem 0 2.7rem;
+        display: flex;
+
+        textarea {
+          width: 100%;
+          height: 100%;
+          padding: 1.5rem;
+          font-size: 1.6rem;
+          color: $text-color;
+          background: transparent;
+          border-radius: 0.6rem;
+          resize: none;
+          border: solid $main-color 2px;
+
+          &::placeholder {
+            color: $text-color;
+          }
+        }
+      }
+
+      .btn-box {
+        margin-top: 3rem;
+        position: relative;
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        height: 5rem;
+        justify-content: center;
+
+        .btn {
+          position: relative;
+          width: 15rem;
+          height: 100%;
+          border: solid 0.2rem $main-color;
+          border-radius: 1rem;
+          font-size: 1.5rem;
+          font-weight: 700;
+          letter-spacing: 0.1rem;
+          color: $main-color;
+          transition: 0.3s;
+          transition: box-shadow 0.3s ease;
+
+          &:hover {
+            box-shadow: 0 0 5rem $main-color;
+            color: $text-color;
+            background: linear-gradient(to bottom, $main-color, #009cd9);
+          }
+        }
+      }
+
     }
   }
 }
